# underwrite-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/src/: config.py  exceptions.py  main.py
apps/api/src/adapters/: __init__.py  rw.py
apps/api/src/data/: districts.json  guidelines.md
apps/api/src/db/: models.py  session.py
apps/api/src/graph/: builder.py  routing.py  state.py
apps/api/src/middleware/: request_id.py
apps/api/src/rag/: chunks.py  ingest.py  retriever.py
apps/api/src/routes/: applications.py  diag.py  districts.py  health.py  personas.py
apps/api/src/schemas/: api.py  applicant.py  decision.py  events.py  medical.py
apps/api/src/scripts/: generate_medical_pdfs.py  run_all_personas.py  run_eval.py  run_persona.py  seed_chroma.py  smoke_test.py
apps/api/src/services/: cost.py  event_bus.py  log.py  orchestrator.py  reference.py  tracing.py
apps/api/src/tools/: age_band.py  bmi.py  district_prevalence.py  pdf_extract.py  risk_scoring.py
apps/api/tests/: conftest.py  test_applications_route.py  test_chunks.py  test_cost.py  test_delete_cancel_routes.py  test_districts_route.py  test_email_composer.py  test_email_providers.py  test_eval_scoring.py  test_events_schema.py  test_events_sse.py  test_health.py  test_ingest.py  test_list_and_files_routes.py  test_log.py  test_node_resilience.py  test_personas_route.py  test_rag.py  test_review_routes.py  test_tools.py
apps/api/tests/eval/: cases.yaml
(+86 files in other folders)
